# staticcheck-nogo-example

./: BUILD.bazel  WORKSPACE  deps.bzl  go.mod  go.sum  main.go
tools/go/: BUILD.bazel
